--- a/index.html
+++ b/index.html
@@ -121,46 +121,41 @@
 
 
     <!-- Hero Section -->
-    <section class="hero-bg min-h-screen flex items-center justify-center relative overflow-hidden pt-16">
-        <!-- Floating Elements -->
-        <div class="absolute top-20 left-10 floating-element">
-            <i class="fas fa-palm-tree text-white text-4xl opacity-30"></i>
-        </div>
-        <div class="absolute top-40 right-20 floating-element" style="animation-delay: 2s;">
-            <i class="fas fa-umbrella-beach text-white text-3xl opacity-30"></i>
-        </div>
-        <div class="absolute bottom-40 left-20 floating-element" style="animation-delay: 4s;">
-            <i class="fas fa-fish text-white text-2xl opacity-30"></i>
-        </div>
-        
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
-            <div class="max-w-4xl mx-auto">
-                <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 leading-tight hero-text">
-                    Discover Property Deals in 
-                    <span class="text-yellow-300">Zanzibar</span>
-                </h1>
-                <p class="text-xl md:text-2xl text-white mb-8 max-w-3xl mx-auto leading-relaxed hero-text">
-                    Your gateway to paradise properties. Find your dream vacation home, investment opportunity, or permanent residence in the beautiful islands of Zanzibar.
-                </p>
-                <div class="bg-white bg-opacity-20 backdrop-blur-md rounded-2xl p-6 max-w-2xl mx-auto">
-                    <h3 class="text-2xl font-bold text-white mb-4 hero-text">Contact Us Today</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-white">
-                        <div class="flex items-center justify-center">
-                            <i class="fas fa-phone mr-2 text-yellow-300"></i>
-                            <span class="hero-text">0716 002 790</span>
-                        </div>
-                        <div class="flex items-center justify-center">
-                            <i class="fas fa-phone mr-2 text-yellow-300"></i>
-                            <span class="hero-text">0682 783 876</span>
-                        </div>
-                        <div class="flex items-center justify-center">
-                            <i class="fas fa-phone mr-2 text-yellow-300"></i>
-                            <span class="hero-text">0656 833 799</span>
-                        </div>
+    <section class="min-h-screen flex items-center justify-center relative overflow-hidden pt-16 bg-cover bg-center bg-fixed" style="background-image: url('/assets/hero.jpg');">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
+        <div class="max-w-4xl mx-auto">
+            <img src="/assets/logo.png" alt="Zanzibaba Real Estate" class="mx-auto w-24 mb-6 rounded-full">
+            <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 leading-tight hero-text">
+                Discover Property Deals in 
+                <span class="text-yellow-300">Zanzibar</span>
+            </h1>
+            <p class="text-xl md:text-2xl text-white mb-8 max-w-3xl mx-auto leading-relaxed hero-text">
+                Your gateway to paradise properties. Find your dream vacation home, investment opportunity, or permanent residence in the beautiful islands of Zanzibar.
+            </p>
+            <div class="bg-white bg-opacity-20 backdrop-blur-md rounded-2xl p-6 max-w-2xl mx-auto">
+                <h3 class="text-2xl font-bold text-white mb-4 hero-text">Contact Us Today</h3>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-white">
+                    <div class="flex items-center justify-center">
+                        <i class="fas fa-phone mr-2 text-yellow-300"></i>
+                        <span class="hero-text">0716 002 790</span>
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <i class="fas fa-phone mr-2 text-yellow-300"></i>
+                        <span class="hero-text">0682 783 876</span>
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <i class="fas fa-phone mr-2 text-yellow-300"></i>
+                        <span class="hero-text">0656 833 799</span>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 text-white animate-bounce">
+        <i class="fas fa-chevron-down text-2xl"></i>
+    </div>
+</section>
+
         
         <!-- Scroll Indicator -->
         <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 text-white animate-bounce">
@@ -267,15 +262,12 @@
                     </div>
 
                     <!-- Phone Number -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Phone Number *</label>
-                        <div class="flex">
-                            <span class="inline-flex items-center px-3 rounded-l-xl border border-r-0 border-gray-300 bg-gray-50 text-gray-500">
-                                <i class="fas fa-phone mr-1"></i>+255
-                            </span>
-                            <input type="tel" class="flex-1 px-4 py-3 rounded-r-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300" placeholder="712 345 678" required>
-                        </div>
-                    </div>
+                    <!-- Phone Number -->
+<div>
+    <label class="block text-gray-700 font-semibold mb-2">Phone Number *</label>
+    <input type="tel" class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300" placeholder="Include country code e.g. +255712345678" required>
+</div>
+
 
                     <!-- Location Checkboxes -->
                     <div>
