--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
             <div class="flex items-center">
-                <img src="/assets/logo.png" alt="Zanzibaba Logo" class="w-10 h-10 mr-3">
+<img src="https://emkuwa.github.io/zanzibaba_realestate/assets/logo.png" alt="Zanzibaba Logo" class="w-10 h-10 mr-3">
                 <h1 class="text-2xl font-bold text-gray-800">
                     Zanzibaba Real Estate
                 </h1>
