--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
     <!-- Hero Section -->
-style="background-image: url('https://emkuwa.github.io/zanzibaba_realestate/assets/hero.png');"
+<section class="min-h-screen flex items-center justify-center relative overflow-hidden pt-16 bg-cover bg-center bg-fixed" style="background-image: url('https://emkuwa.github.io/zanzibaba_realestate/assets/hero.png');">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
         <div class="max-w-4xl mx-auto">
             <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 leading-tight hero-text">
