--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             
             <div class="form-container rounded-3xl shadow-2xl p-8 md:p-12">
-                <form class="space-y-6">
+<form action="https://formspree.io/f/xanjlqaw" method="POST" class="space-y-6">
                     <!-- Full Name -->
                     <div>
                         <label class="block text-gray-700 font-semibold mb-2">Full Name *</label>
