--- a/index.html
+++ b/index.html
@@ -239,127 +239,136 @@
     </section>
 
     <!-- Contact Form Section -->
-    <section id="contact" class="py-20 bg-gradient-to-br from-blue-50 to-purple-50">
-        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-12">
-                <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Get in Touch</h2>
-                <p class="text-xl text-gray-600">Ready to find your perfect property? Send us your requirements and we'll get back to you shortly.</p>
-            </div>
-            
-            <div class="form-container rounded-3xl shadow-2xl p-8 md:p-12">
-<form action="https://formspree.io/f/xanjlqaw" method="POST" class="space-y-6">
-                    <!-- Full Name -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Full Name *</label>
-                        <input type="text" class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300" placeholder="Enter your full name" required>
-                    </div>
+<section id="contact" class="py-20 bg-gradient-to-br from-blue-50 to-purple-50">
+  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="text-center mb-12">
+      <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Get in Touch</h2>
+      <p class="text-xl text-gray-600">Ready to find your perfect property? Send us your requirements and we'll get back to you shortly.</p>
+    </div>
 
-                    <!-- Email -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Email Address *</label>
-                        <input type="email" class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300" placeholder="Enter your email address" required>
-                    </div>
-
-                    <!-- Phone Number -->
-                    <!-- Phone Number -->
-<div>
-    <label class="block text-gray-700 font-semibold mb-2">Phone Number *</label>
-    <input type="tel" class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300" placeholder="Include country code e.g. +255712345678" required>
-</div>
-
-
-                    <!-- Location Checkboxes -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-4">Preferred Locations</label>
-                        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-                            <div class="checkbox-wrapper flex items-center">
-                                <input type="checkbox" id="paje" class="mr-3">
-                                <label for="paje" class="text-gray-700 cursor-pointer">Paje</label>
-                            </div>
-                            <div class="checkbox-wrapper flex items-center">
-                                <input type="checkbox" id="jambiani" class="mr-3">
-                                <label for="jambiani" class="text-gray-700 cursor-pointer">Jambiani</label>
-                            </div>
-                            <div class="checkbox-wrapper flex items-center">
-                                <input type="checkbox" id="bwejuu" class="mr-3">
-                                <label for="bwejuu" class="text-gray-700 cursor-pointer">Bwejuu</label>
-                            </div>
-                            <div class="checkbox-wrapper flex items-center">
-                                <input type="checkbox" id="michamvi" class="mr-3">
-                                <label for="michamvi" class="text-gray-700 cursor-pointer">Michamvi</label>
-                            </div>
-                            <div class="checkbox-wrapper flex items-center">
-                                <input type="checkbox" id="makunduchi" class="mr-3">
-                                <label for="makunduchi" class="text-gray-700 cursor-pointer">Makunduchi</label>
-                            </div>
-                            <div class="checkbox-wrapper flex items-center">
-                                <input type="checkbox" id="others" class="mr-3">
-                                <label for="others" class="text-gray-700 cursor-pointer">Others</label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Property Type -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Property Type</label>
-                        <select class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
-                            <option value="">Select property type</option>
-                            <option value="beachfront-plot">Beachfront Plot</option>
-                            <option value="vacant-land">Vacant Land</option>
-                            <option value="luxury-villa">Luxury Villa</option>
-                            <option value="residential-home">Residential Home</option>
-                            <option value="apartment">Apartment</option>
-                            <option value="hotel">Hotel</option>
-                            <option value="guesthouse">Guesthouse</option>
-                            <option value="lodge">Lodge</option>
-                            <option value="commercial">Commercial Space</option>
-                        </select>
-                    </div>
-
-                    <!-- Budget Range -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Budget Range (USD)</label>
-                        <select class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
-                            <option value="">Select budget range</option>
-                            <option value="under-50k">Under $50,000</option>
-                            <option value="50k-100k">$50,000 - $100,000</option>
-                            <option value="100k-250k">$100,000 - $250,000</option>
-                            <option value="250k-500k">$250,000 - $500,000</option>
-                            <option value="500k-1m">$500,000 - $1,000,000</option>
-                            <option value="over-1m">Over $1,000,000</option>
-                        </select>
-                    </div>
-
-                    <!-- Timeline -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Timeline</label>
-                        <select class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
-                            <option value="">Select timeline</option>
-                            <option value="immediate">Immediate (Within 1 month)</option>
-                            <option value="short">Short term (1-3 months)</option>
-                            <option value="medium">Medium term (3-6 months)</option>
-                            <option value="long">Long term (6+ months)</option>
-                            <option value="flexible">Flexible</option>
-                        </select>
-                    </div>
-
-                    <!-- Additional Message -->
-                    <div>
-                        <label class="block text-gray-700 font-semibold mb-2">Additional Message</label>
-                        <textarea rows="4" class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300 resize-none" placeholder="Tell us more about your requirements..."></textarea>
-                    </div>
-
-                    <!-- Submit Button -->
-                    <div class="text-center pt-4">
-                        <button type="submit" class="gradient-btn text-white px-12 py-4 rounded-full font-semibold text-lg shadow-xl w-full md:w-auto">
-                            <i class="fas fa-paper-plane mr-2"></i>
-                            Send Inquiry
-                        </button>
-                    </div>
-                </form>
-            </div>
+    <div class="form-container rounded-3xl shadow-2xl p-8 md:p-12">
+      <form action="https://formspree.io/f/xanjlqaw" method="POST" class="space-y-6">
+        
+        <!-- Full Name -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Full Name *</label>
+          <input type="text" name="full_name" required placeholder="Enter your full name"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
         </div>
-    </section>
+
+        <!-- Email -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Email Address *</label>
+          <input type="email" name="email" required placeholder="Enter your email address"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
+        </div>
+
+        <!-- Phone Number -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Phone Number *</label>
+          <input type="tel" name="phone" required placeholder="Include country code e.g. +255712345678"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
+        </div>
+
+        <!-- Preferred Locations -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-4">Preferred Locations</label>
+          <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+            <div class="flex items-center">
+              <input type="checkbox" id="paje" name="preferred_locations[]" value="Paje" class="mr-3">
+              <label for="paje" class="text-gray-700 cursor-pointer">Paje</label>
+            </div>
+            <div class="flex items-center">
+              <input type="checkbox" id="jambiani" name="preferred_locations[]" value="Jambiani" class="mr-3">
+              <label for="jambiani" class="text-gray-700 cursor-pointer">Jambiani</label>
+            </div>
+            <div class="flex items-center">
+              <input type="checkbox" id="bwejuu" name="preferred_locations[]" value="Bwejuu" class="mr-3">
+              <label for="bwejuu" class="text-gray-700 cursor-pointer">Bwejuu</label>
+            </div>
+            <div class="flex items-center">
+              <input type="checkbox" id="michamvi" name="preferred_locations[]" value="Michamvi" class="mr-3">
+              <label for="michamvi" class="text-gray-700 cursor-pointer">Michamvi</label>
+            </div>
+            <div class="flex items-center">
+              <input type="checkbox" id="makunduchi" name="preferred_locations[]" value="Makunduchi" class="mr-3">
+              <label for="makunduchi" class="text-gray-700 cursor-pointer">Makunduchi</label>
+            </div>
+            <div class="flex items-center">
+              <input type="checkbox" id="others" name="preferred_locations[]" value="Others" class="mr-3">
+              <label for="others" class="text-gray-700 cursor-pointer">Others</label>
+            </div>
+          </div>
+        </div>
+
+        <!-- Property Type -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Property Type</label>
+          <select name="property_type"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
+            <option value="">Select property type</option>
+            <option value="beachfront-plot">Beachfront Plot</option>
+            <option value="vacant-land">Vacant Land</option>
+            <option value="luxury-villa">Luxury Villa</option>
+            <option value="residential-home">Residential Home</option>
+            <option value="apartment">Apartment</option>
+            <option value="hotel">Hotel</option>
+            <option value="guesthouse">Guesthouse</option>
+            <option value="lodge">Lodge</option>
+            <option value="commercial">Commercial Space</option>
+          </select>
+        </div>
+
+        <!-- Budget Range -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Budget Range (USD)</label>
+          <select name="budget_range"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
+            <option value="">Select budget range</option>
+            <option value="under-50k">Under $50,000</option>
+            <option value="50k-100k">$50,000 - $100,000</option>
+            <option value="100k-250k">$100,000 - $250,000</option>
+            <option value="250k-500k">$250,000 - $500,000</option>
+            <option value="500k-1m">$500,000 - $1,000,000</option>
+            <option value="over-1m">Over $1,000,000</option>
+          </select>
+        </div>
+
+        <!-- Timeline -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Timeline</label>
+          <select name="timeline"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300">
+            <option value="">Select timeline</option>
+            <option value="immediate">Immediate (Within 1 month)</option>
+            <option value="short">Short term (1–3 months)</option>
+            <option value="medium">Medium term (3–6 months)</option>
+            <option value="long">Long term (6+ months)</option>
+            <option value="flexible">Flexible</option>
+          </select>
+        </div>
+
+        <!-- Additional Message -->
+        <div>
+          <label class="block text-gray-700 font-semibold mb-2">Additional Message</label>
+          <textarea name="message" rows="4"
+            class="w-full px-4 py-3 rounded-xl border border-gray-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 transition-all duration-300 resize-none"
+            placeholder="Tell us more about your requirements..."></textarea>
+        </div>
+
+        <!-- Submit Button -->
+        <div class="text-center pt-4">
+          <button type="submit"
+            class="gradient-btn text-white px-12 py-4 rounded-full font-semibold text-lg shadow-xl w-full md:w-auto">
+            <i class="fas fa-paper-plane mr-2"></i>
+            Send Inquiry
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-12">
