--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </div>
 
     <div class="form-container rounded-3xl shadow-2xl p-8 md:p-12">
-      <form action="https://formspree.io/f/xanjlqaw" method="POST" class="space-y-6">
+      <form id="property-form" action="https://formspree.io/f/xanjlqaw" method="POST" class="space-y-6" onsubmit="return handleFormSubmit(event)">
         
         <!-- Full Name -->
         <div>
@@ -365,6 +365,10 @@
           </button>
         </div>
       </form>
+          <div id="thank-you-message" class="hidden mt-6 text-green-700 text-center text-xl font-semibold">
+  ✅ Thank you! We’ve received your inquiry and will contact you soon.
+</div>
+
     </div>
   </div>
 </section>
@@ -492,5 +496,37 @@
             parallax.style.transform = `translateY(${speed}px)`;
         });
     </script>
+                <script>
+  function handleFormSubmit(event) {
+    event.preventDefault();
+
+    const form = document.getElementById('property-form');
+    const thankYouMessage = document.getElementById('thank-you-message');
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        form.reset();
+        thankYouMessage.classList.remove('hidden');
+        setTimeout(() => {
+          thankYouMessage.classList.add('hidden');
+        }, 5000);
+      } else {
+        alert('Oops! Something went wrong. Try again.');
+      }
+    }).catch(error => {
+      alert('Oops! Network error. Please try again later.');
+    });
+
+    return false;
+  }
+</script>
+
 </body>
 </html>
